--- a/src/styles/form-elements.scss
+++ b/src/styles/form-elements.scss
@@ -49,3 +49,9 @@
         margin-bottom: 5px;
     }
 }
+
+.form-control{
+  [data-bs-theme="dark"] & {
+    color: $color-primary !important;
+  }  
+}
